--- a/public/index.html
+++ b/public/index.html
@@ -149,10 +149,10 @@
                             <h3>Kaluza</h3>
                         </a>
                         <h4 class="current">Software Engineer</h4>
-                        <div class="chip-wrapper">
-                            <span class="chip">Typescript</span>
-                            <span class="chip">Git</span>
-                            <span class="chip">Github Actions</span>
+                        <div class="topic-wrapper">
+                            <span class="topic">Typescript</span>
+                            <span class="topic">Git</span>
+                            <span class="topic">Github Actions</span>
                         </div>
                     </div>
                 </li>
@@ -166,13 +166,13 @@
                         <h4>Intermediate Software Engineer</h4>
                         <h4>Junior Software Engineer</h4>
                         <h4>Graduate Software Engineer</h4>
-                        <div class="chip-wrapper">
-                            <span class="chip">Git</span>
-                            <span class="chip">SQL</span>
-                            <span class="chip">Docker</span>
-                            <span class="chip">Jenkins</span>
-                            <span class="chip">API Design</span>
-                            <span class="chip">Unit Testing</span>
+                        <div class="topic-wrapper">
+                            <span class="topic">Git</span>
+                            <span class="topic">SQL</span>
+                            <span class="topic">Docker</span>
+                            <span class="topic">Jenkins</span>
+                            <span class="topic">API Design</span>
+                            <span class="topic">Unit Testing</span>
                         </div>
                     </div>
                 </li>
@@ -186,10 +186,10 @@
                         <h4>IT Support Specialist</h4>
                         <h4>IT/Marketing Assistant</h4>
                         <h4>Administrative Assistant</h4>
-                        <div class="chip-wrapper">
-                            <span class="chip">Adobe Suite</span>
-                            <span class="chip">Social Media Marketing</span>
-                            <span class="chip">Wordpress</span>
+                        <div class="topic-wrapper">
+                            <span class="topic">Adobe Suite</span>
+                            <span class="topic">Social Media Marketing</span>
+                            <span class="topic">Wordpress</span>
                         </div>
                     </div>
                 </li>
